# Coop-Motion-Planner

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ProblemCntrl.yml  ProblemCntrlUAV.yml  ProblemCoop.yml  cmake_install.cmake  run.sh  visualize.py
includes/: ControlSpaceDatabase.h  FrontierPlanner.h  GoalRegionDatabase.h  PostProcessing.h  StatePropagatorDatabase.h  StateSpaceDatabase.h  StateValidityCheckerDatabase.h  World.h
solutions/2023_11_23_19_05_42/: agent0.txt
src/: coop_path_planner.cpp  demo_control_planning.cpp  demo_geometric_planning.cpp  testing.cpp
